fixed blocks not rendering on share preview

--- a/share.html
+++ b/share.html
@@ -131,6 +131,7 @@
     <script src="script/showdown/extension/embed.js"></script>
     <script src="script/showdown/extension/figcaption.js"></script>
     <script src="script/showdown/extension/style.js"></script>
+    <script src="script/showdown/extension/blocks.js"></script>
     <script src="script/editorTools.js"></script>
     <script>
         // intro
@@ -203,7 +204,8 @@
                 'footnotes', // footnotes support
                 'embed', // embed support
                 'figureCaption', // figure and figcaption support
-                'style'
+                'style',
+                'blocks'
             ],
         });
 
