update status bar
better UI, modular status bar items

--- a/dialogs/macros.html
+++ b/dialogs/macros.html
@@ -182,6 +182,7 @@
 
             await Macros.create({
                 name: info.name,
+                author: info.author,
                 description: info.description,
                 icon: info.icon,
                 code
