--- a/index.html
+++ b/index.html
@@ -1379,11 +1379,20 @@
             function showMacrosDialog() {
                 let leftPane = `
                 <button class='icon-button' onclick='createMacro()' translate='no' title='Create macro'>add</button>
-                <hr>
                 <button class='icon-button' onclick='importMacro()' translate='no' title='Import macro'>folder_open</button>
                 `
+                
+                let rightpane =
+                `
+                <div class='dropdown'>
+                    <button class='icon-button' onmousedown='toggleDropdown("macros-more-menu")' translate='no' title='More options'>more_vert</button>
+                    <div class='dropdown-content menu' id='macros-more-menu'>
+                        <button class='text-button' onclick='window.open("https://github.com/flarom/cohesion/wiki/Scripting")'>About scripting</button>
+                    </div>
+                </div>
+                `
 
-                showMessageFromFile("dialogs/macros.html", true, false, true, true, 800, leftPane, "");
+                showMessageFromFile("dialogs/macros.html", true, false, true, true, 800, leftPane, "", rightpane);
             }
 
             function showCheatSheet() {
